[package]
name = "cuda-rs-sys"
version = "0.1.0"
authors = ["Ming Yang <ymviv@qq.com>"]
description = "Rust binding to CUDA Driver/Runtime APIs"
repository = "https://github.com/vivym/cuda-rs"
readme = "README.md"
keywords = ["cuda", "ffi"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
