[package]
name = "cuda-rs"
version = "0.1.0"
authors = ["Ming Yang <ymviv@qq.com>"]
description = "Rust wrapper for CUDA Driver/Runtime APIs"
repository = "https://github.com/vivym/cuda-rs"
readme = "README.md"
keywords = ["cuda", "ffi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-rs-sys = "0.1"
enum_primitive = "0.1.1"
num-traits = "0.2.17"
thiserror = "1.0.52"
