[package]
name = "cuda-rs"
version = "0.1.5"
authors = ["Ming Yang <ymviv@qq.com>"]
description = "A safe rust wrapper for CUDA Driver/Runtime APIs"
repository = "https://github.com/vivym/cuda-rs"
readme = "README.md"
keywords = ["cuda", "ffi"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-rs-sys = "0.1"
enum_primitive = "0.1"
num-traits = "0.2"
thiserror = "1"
